form/submit button corrected shift

--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -40,13 +40,11 @@
 }
 .button {
   justify-content: center;
-  text-align: center;
   font-size: medium;
   border-radius: 12px;
   border: none;
   height: 38px;
   width: 68px;
-  /* margin-left: 40%; */
   color: white;
   background-color: rgba(255, 27, 251, 0.575);
 }
@@ -58,7 +56,6 @@
   border: none;
   height: 38px;
   width: 68px;
-  margin-left: 40%;
   color: white;
   background-color: #aefb6f90;
 }
